--- a/agentic-backend/pyproject.toml
+++ b/agentic-backend/pyproject.toml
@@ -12,6 +12,8 @@ google-cloud-aiplatform = { extras = [
 google-genai = "^1.9.0"
 pydantic = "^2.10.6"
 python-dotenv = "^1.0.1"
+fastapi = "^0.104.1"
+uvicorn = "^0.24.0"
 
 [tool.poetry.group.dev]
 optional = true
